[package]
name = "edge-spool"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Append-only JSONL disk spool for durable log-batch buffering in edge-worker."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["fs", "io-util", "rt", "macros", "sync"] }
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
