[package]
name = "edge-worker"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[lib]
name = "edge_worker"
path = "src/lib.rs"

[dependencies]
async-nats = { version = "0.49", features = ["jetstream", "nkeys"] }
async-trait = "0.1"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.0"
futures = "0.3"
chrono = "0.4"
edge-runtime = { path = "../edge-runtime" }
edge-spool = { path = "../edge-spool" }
wasmtime = { version = "=45.0.3", features = ["component-model", "async", "anyhow"] }
# `ProxyPre<RuntimeState>` for Handler (FaaS) components — see
# `src/dispatch.rs`. Pairs with `wasmtime-wasi-http` in edge-runtime.
wasmtime-wasi-http = "=45.0.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
jsonwebtoken = "9"
uuid = { version = "1.0", features = ["v4"] }

# HTTP server for Handler dispatch (C6). axum hosts the public listener;
# each request drives one `ProxyPre` instance through the guest's
# `wasi:http/incoming-handler` impl. tower-http supplies the body-cap
# middleware (10 MB RequestBodyLimitLayer). http-body-util bridges
# axum's Body and wasmtime-wasi-http's HyperOutgoingBody.
axum = { version = "0.7", features = ["http1"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["limit"] }
http-body-util = "0.1"
# hyper is the underlying HTTP/1 server the wasmtime-wasi-http docs use.
# wasmtime-wasi-http re-exports HyperOutgoingBody but the Request/Response
# types come from hyper directly, so we need a direct dep. Pulled with
# `client` because wasmtime-wasi-http's default_send_request depends on the
# hyper client internals.
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }

# TLS support for HandlerDispatch FaaS endpoint (issue #209).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2"
tokio-rustls = "0.26"

[dev-dependencies]
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["nats"] }
wiremock = "0.6"
tempfile = "3"
# Generate self-signed TLS certs for the try_load_tls_config test (issue #209).
rcgen = { version = "0.13", features = ["pem"] }
# Shared test harness: NATS container startup, skip predicate, and
# Supervisor wiring (formerly duplicated across integration_tests.rs,
# ingress_wire_integration.rs, and edge-ingress/tests/integration.rs).
# The crate is dev-only on this side and on edge-ingress's side; its
# regular `[dependencies]` list does pull edge-worker (it has to, to
# type the supervisor field) — Cargo handles the dev-only↔regular
# edge between the two crates without rejecting them as a cycle.
edge-test-helpers = { path = "../edge-test-helpers" }
# Cross-wire integration tests exercise the public-ingress contract:
# the worker emits a heartbeat, the ingress parses it and populates its
# routing table. Adding edge-ingress as a dev-dependency lets the test
# directly call `edge_ingress::heartbeats::apply_heartbeat` (the same
# function the NATS subscriber loop drives) without standing up the full
# ingress binary.
edge-ingress = { path = "../edge-ingress" }
# Disable cargo-semver-checks lints that flag internal-process structs
# (Supervisor, WorkerState, Config) and internal enum variants
# (TaskMessage::FullSync). These types ARE part of the published crate's
# surface, but they're not intended to be constructed or matched by
# downstream crates — Supervisor is the worker binary's process
# singleton, Config is the CLI's loader output, and WorkerState holds
# runtime-only state.
#
# Adding new fields to these structs (e.g. Supervisor.http in PR #166's
# review follow-up, Config.worker_sync_threshold_secs in PR #166's
# original commit, WorkerState.last_task_received_at in the reconcile
# commit) and new enum variants (TaskMessage::FullSync in the wire-format
# commit) triggered the `constructible_struct_adds_field` and
# `enum_variant_added` lints — which treated them as breaking changes
# for downstream consumers. But no in-repo crate constructs any of
# these externally; the only construction sites are `main.rs` and the
# integration test harnesses (which are external from cargo-semver-checks'
# perspective but internal to the codebase).
#
# The alternative — `#[non_exhaustive]` + `impl Default` — is
# impractical here: `Default for Supervisor` would need a placeholder
# NatsClient (which requires async network connect), Downloader
# (requires a CP URL + JWT signer), and WorkerJwtSigner (requires
# HMAC secret) — none of which have meaningful zero-config defaults.
[package.metadata.cargo-semver-checks.lints]
constructible_struct_adds_field = "allow"
enum_variant_added = "allow"

# `cargo-udeps` flags `axum` as unused because the only call site
# (`l8_long_running_self_host`) is a deferred fixture whose test
# module is gated off the default `cargo test` build. It IS used
# in the long-running fixtures, see the PR description.
[package.metadata.cargo-udeps.ignore]
normal = ["axum"]
