[package]
name = "edge-worker"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[lib]
name = "edge_worker"
path = "src/lib.rs"

[dependencies]
async-nats = { version = "0.49", features = ["jetstream", "nkeys"] }
async-trait = "0.1"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.0"
futures = "0.3"
chrono = "0.4"
edge-runtime = { path = "../edge-runtime" }
edge-spool = { path = "../edge-spool" }
wasmtime = { version = "=45.0.3", features = ["component-model", "async", "anyhow"] }
# `ProxyPre<RuntimeState>` for Handler (FaaS) components — see
# `src/dispatch.rs`. Pairs with `wasmtime-wasi-http` in edge-runtime.
wasmtime-wasi-http = "=45.0.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
# Per-worker HS256 secret (issue #430) arrives pre-derived from the
# control plane (Go-side HKDF over the cluster master + worker
# `public_key`); the worker just stores it under a `wkr_<hex>` kid in
# `.worker-cache/identity.key` and feeds it to `WorkerJwtSigner`.
# The worker never re-derives — see `edge-control-plane/internal/signing/worker_key.go`.
jsonwebtoken = "9"
uuid = { version = "1.0", features = ["v4"] }
# Artifact-signing verifier (issue #307, PR2). Both crates are already
# transitive via reqwest's dependency tree — promoted to direct deps so
# we can pin the version we depend on (transitive bumps would otherwise
# pin us implicitly, and ed25519-dalek's 2.x → 1.x is a breaking change).
ed25519-dalek = { version = "2.2", features = ["std"] }
base64 = "0.22"
# `rand_core::OsRng` for generating the worker identity seed
# (issue #430). Version pinned to 0.6 to match ed25519-dalek 2.2's
# internal rand_core dependency — version skew between
# rand_core 0.6 and 0.7+ is a breaking change.
rand_core = "=0.6.4"

# HTTP server for Handler dispatch (C6). axum hosts the public listener;
# each request drives one `ProxyPre` instance through the guest's
# `wasi:http/incoming-handler` impl. tower-http supplies the body-cap
# middleware (10 MB RequestBodyLimitLayer). http-body-util bridges
# axum's Body and wasmtime-wasi-http's HyperOutgoingBody.
axum = { version = "0.7", features = ["http1"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["limit"] }
http-body-util = "0.1"
# hyper is the underlying HTTP/1 server the wasmtime-wasi-http docs use.
# wasmtime-wasi-http re-exports HyperOutgoingBody but the Request/Response
# types come from hyper directly, so we need a direct dep. Pulled with
# `client` because wasmtime-wasi-http's default_send_request depends on the
# hyper client internals.
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }

# TLS support for HandlerDispatch FaaS endpoint (issue #209).
# PEM parsing uses the in-tree `rustls::pki_types::pem::PemObject` API
# (rustls 0.23.41 re-exports `rustls-pki-types` via `pub use
# pki_types::*;` at `rustls/src/lib.rs:679`) — issue #625, replaces the
# unmaintained `rustls-pemfile` crate (RUSTSEC-2025-0134) without
# taking a new direct dep. Pinned to `=0.23.41` so the
# `pki_types::pem::PemObject` re-export path is guaranteed; a future
# rustls major bump could move the re-export or change its shape.
rustls = { version = "=0.23.41", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
wasmparser = "0.252.0"

[dev-dependencies]
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["nats"] }
wiremock = "0.6"
tempfile = "3"
# Used by the body-cap test (issue #451) to spin up a tiny in-process
# hyper server that returns a chunked-encoded response (no
# Content-Length), so the streaming-accumulator branch in the
# downloader is the only thing that can catch an oversize body.
hyper-util = { version = "0.1", features = ["tokio"] }
# Used by the signature integration tests (issue #307 PR2) to
# sign fixtures with the deterministic test keypair.
ed25519-dalek = { version = "2.2", features = ["std"] }
base64 = "0.22"
# Generate self-signed TLS certs for the try_load_tls_config test (issue #209).
rcgen = { version = "0.13", features = ["pem"] }
# SHA-1 for the WebSocket Sec-WebSocket-Accept handshake in the
# JS WebSocket e2e test (issue #448). RFC 6455 §1.3 mandates SHA-1
# over the client key + `258EAFA5-E914-47DA-95CA-C5AB0DC85B11`. Same
# algorithm the host's own `compute_accept_key` uses
# (edge-runtime/src/interfaces/websocket.rs:642-650).
sha1 = "0.10"
# Shared test harness: NATS container startup, skip predicate, and
# Supervisor wiring (formerly duplicated across integration_tests.rs,
# ingress_wire_integration.rs, and edge-ingress/tests/integration.rs).
# The crate is dev-only on this side and on edge-ingress's side; its
# regular `[dependencies]` list does pull edge-worker (it has to, to
# type the supervisor field) — Cargo handles the dev-only↔regular
# edge between the two crates without rejecting them as a cycle.
edge-test-helpers = { path = "../edge-test-helpers" }
# Cross-wire integration tests exercise the public-ingress contract:
# the worker emits a heartbeat, the ingress parses it and populates its
# routing table. Adding edge-ingress as a dev-dependency lets the test
# directly call `edge_ingress::heartbeats::apply_heartbeat` (the same
# function the NATS subscriber loop drives) without standing up the full
# ingress binary.
edge-ingress = { path = "../edge-ingress" }
# Disable cargo-semver-checks lints that flag internal-process structs
# (Supervisor, WorkerState, Config) and internal enum variants
# (TaskMessage::FullSync). These types ARE part of the published crate's
# surface, but they're not intended to be constructed or matched by
# downstream crates — Supervisor is the worker binary's process
# singleton, Config is the CLI's loader output, and WorkerState holds
# runtime-only state.
#
# Adding new fields to these structs (e.g. Supervisor.http in PR #166's
# review follow-up, Config.worker_sync_threshold_secs in PR #166's
# original commit, WorkerState.last_task_received_at in the reconcile
# commit) and new enum variants (TaskMessage::FullSync in the wire-format
# commit) triggered the `constructible_struct_adds_field` and
# `enum_variant_added` lints — which treated them as breaking changes
# for downstream consumers. But no in-repo crate constructs any of
# these externally; the only construction sites are `main.rs` and the
# integration test harnesses (which are external from cargo-semver-checks'
# perspective but internal to the codebase).
#
# The alternative — `#[non_exhaustive]` + `impl Default` — is
# impractical here: `Default for Supervisor` would need a placeholder
# NatsClient (which requires async network connect), Downloader
# (requires a CP URL + JWT signer), and WorkerJwtSigner (requires
# HMAC secret) — none of which have meaningful zero-config defaults.
[package.metadata.cargo-semver-checks.lints]
constructible_struct_adds_field = "allow"
enum_variant_added = "allow"

# `cargo-udeps` flags `axum` as unused because the only call site
# (`l8_long_running_self_host`) is a deferred fixture whose test
# module is gated off the default `cargo test` build. It IS used
# in the long-running fixtures, see the PR description.
[package.metadata.cargo-udeps.ignore]
normal = ["axum"]
