[package]
name = "edge-migrate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
edge-migrate-lib = { path = "../edge-migrate-lib" }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
