[package]
name = "edge-fixture-handler"
version = "0.1.0"
edition = "2021"
publish = false

# Empty `[workspace]` declares the package as standalone so the
# root workspace's resolver-2 defaults (wasm-tools component
# model, wit-bindgen 0.51) don't interfere with the
# `wasm32-unknown-unknown` build + the legacy wit-bindgen 0.45
# pin this fixture relies on. See `edge-worker/tests/fixtures/
# README.md` for the build procedure.
[workspace]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wit-bindgen = "0.45"
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
